ocaml (3.11.0-4) UNRELEASED; urgency=low

  * Add native versions of ocamldep and ocamldoc in findlib's configuration
    when ocaml-native-compilers is installed, closes: #516085.

 -- Samuel Mimram <smimram@debian.org>  Thu, 19 Feb 2009 11:06:02 +0100

ocaml (3.11.0-3) experimental; urgency=low

  * Mark libthreadsnat.a as native-only file (fix FTBFS on bytecode-only
    architectures)

 -- Stephane Glondu <steph@glondu.net>  Thu, 19 Feb 2009 07:25:27 +0100

ocaml (3.11.0-2) experimental; urgency=low

  [ Stephane Glondu ]
  * Add DM-Upload-Allowed (with Stefano's blessing)
  * Remove binary package-specific copyright files
  * Major changes in debian/rules:
    - more extensive use of debhelper 7
    - do no longer use deprecated dh_movefiles and *.files
    - get closer to CDBS API
    - add versioned build-dependency to dh-ocaml
    - use ocamlinit snippet provided by dh-ocaml
    - add a build cache (for Debian debugging)
    - do not compress labltk examples
    - reflect original locations of camlp4 *.mli files in binary packages
    - remove special handling of CFLAGS (handled by dpkg-buildpackage now)
  * Add dbm_ldopts.dpatch, to add missing linking options for dbm
    (fixes ocsigen FTBFS)
  * Remove man-ocamlmklib.dpatch, and put manpage in debian/man
  * Remove {dumpobj,objinfo}.dpatch, and put manpages in debian/man
  * Build and install dumpapprox, and provide a manpage
  * Discriminate *-nox packages in short descriptions (thanks Lintian)
  
  [ Stefano Zacchiroli ]
  * debian/control:
    - clean-up Uploaders, removing people no longer contributing and
      handling some specific removal requests
    - bump versioned dep on ocaml --Replaces-> ocaml-nox to avoid file
      overwrite upgrade problems

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 18 Feb 2009 14:39:31 +0100

ocaml (3.11.0-1) experimental; urgency=low

  * New upstream release:
    - manpages.dpatch, ocamldoc.dpatch removed (merged upstream)