@@ -1,0 +1,11 @@
+OCaml Debian source package
+===========================
+
+Dispatching files between binary packages
+-----------------------------------------
+
+The dispatching is done as usual with *.install by dh_install, which
+are generated from *.install.in by ocamlinit.mk (from dh-ocaml), and
+the gen_modules.pl script (in ocaml source package). You should have a
+look at the comments in gen_modules.pl to understand the format of
+*.install.in files.
