@@ -36,241 +36,6 @@ OPT: @OCamlStdlibDir@/libasmrunp.a
      @OCamlStdlibDir@/libthreads.a
 OPT: @OCamlStdlibDir@/libthreadsnat.a
      @OCamlStdlibDir@/libunix.a
-     @OCamlStdlibDir@/arg.ml
-     @OCamlStdlibDir@/arg.mli
-OPT: @OCamlStdlibDir@/arg.cmx
-OPT: @OCamlStdlibDir@/arg.p.cmx
-OPT: @OCamlStdlibDir@/arith_flags.cmx
-OPT: @OCamlStdlibDir@/arith_status.cmx
-     @OCamlStdlibDir@/arith_status.mli
-     @OCamlStdlibDir@/arrayLabels.ml
-     @OCamlStdlibDir@/arrayLabels.mli
-OPT: @OCamlStdlibDir@/arrayLabels.cmx
-OPT: @OCamlStdlibDir@/arrayLabels.p.cmx
-     @OCamlStdlibDir@/array.ml
-     @OCamlStdlibDir@/array.mli
-OPT: @OCamlStdlibDir@/array.cmx
-OPT: @OCamlStdlibDir@/array.p.cmx
-OPT: @OCamlStdlibDir@/big_int.cmx
-     @OCamlStdlibDir@/big_int.mli
-OPT: @OCamlStdlibDir@/bigarray.a
-OPT: @OCamlStdlibDir@/bigarray.cmx
-OPT: @OCamlStdlibDir@/bigarray.cmxa
-     @OCamlStdlibDir@/bigarray.mli
-     @OCamlStdlibDir@/buffer.ml
-     @OCamlStdlibDir@/buffer.mli
-OPT: @OCamlStdlibDir@/buffer.cmx
-OPT: @OCamlStdlibDir@/buffer.p.cmx
-     @OCamlStdlibDir@/callback.ml
-     @OCamlStdlibDir@/callback.mli
-OPT: @OCamlStdlibDir@/callback.cmx
-OPT: @OCamlStdlibDir@/callback.p.cmx
-     @OCamlStdlibDir@/camlinternalLazy.cmi
-OPT: @OCamlStdlibDir@/camlinternalLazy.cmx
-     @OCamlStdlibDir@/camlinternalLazy.ml
-     @OCamlStdlibDir@/camlinternalLazy.mli
-OPT: @OCamlStdlibDir@/camlinternalLazy.p.cmx
-     @OCamlStdlibDir@/camlinternalMod.cmi
-OPT: @OCamlStdlibDir@/camlinternalMod.cmx
-     @OCamlStdlibDir@/camlinternalMod.ml
-     @OCamlStdlibDir@/camlinternalMod.mli
-OPT: @OCamlStdlibDir@/camlinternalMod.p.cmx
-     @OCamlStdlibDir@/camlinternalOO.ml
-     @OCamlStdlibDir@/camlinternalOO.mli
-OPT: @OCamlStdlibDir@/camlinternalOO.cmx
-OPT: @OCamlStdlibDir@/camlinternalOO.p.cmx
-     @OCamlStdlibDir@/char.ml
-     @OCamlStdlibDir@/char.mli
-OPT: @OCamlStdlibDir@/char.cmx
-OPT: @OCamlStdlibDir@/char.p.cmx
-     @OCamlStdlibDir@/complex.ml
-     @OCamlStdlibDir@/complex.mli
-OPT: @OCamlStdlibDir@/complex.cmx
-OPT: @OCamlStdlibDir@/complex.p.cmx
-     @OCamlStdlibDir@/condition.mli
-OPT: @OCamlStdlibDir@/dbm.a
-     @OCamlStdlibDir@/dbm.cmi
-OPT: @OCamlStdlibDir@/dbm.cmx
-OPT: @OCamlStdlibDir@/dbm.cmxa
-     @OCamlStdlibDir@/dbm.mli
-     @OCamlStdlibDir@/digest.ml
-     @OCamlStdlibDir@/digest.mli
-OPT: @OCamlStdlibDir@/digest.cmx
-OPT: @OCamlStdlibDir@/digest.p.cmx
-OPT: @OCamlStdlibDir@/dynlink.a
-OPT: @OCamlStdlibDir@/dynlink.cmx
-OPT: @OCamlStdlibDir@/dynlink.cmxa
-     @OCamlStdlibDir@/dynlink.mli
-     @OCamlStdlibDir@/event.mli
-     @OCamlStdlibDir@/filename.ml
-     @OCamlStdlibDir@/filename.mli
-OPT: @OCamlStdlibDir@/filename.cmx
-OPT: @OCamlStdlibDir@/filename.p.cmx
-     @OCamlStdlibDir@/format.ml
-     @OCamlStdlibDir@/format.mli
-OPT: @OCamlStdlibDir@/format.cmx
-OPT: @OCamlStdlibDir@/format.p.cmx
-     @OCamlStdlibDir@/gc.ml
-     @OCamlStdlibDir@/gc.mli
-OPT: @OCamlStdlibDir@/gc.cmx
-OPT: @OCamlStdlibDir@/gc.p.cmx
-     @OCamlStdlibDir@/genlex.ml
-     @OCamlStdlibDir@/genlex.mli
-OPT: @OCamlStdlibDir@/genlex.cmx
-OPT: @OCamlStdlibDir@/genlex.p.cmx
-     @OCamlStdlibDir@/hashtbl.ml
-     @OCamlStdlibDir@/hashtbl.mli
-OPT: @OCamlStdlibDir@/hashtbl.cmx
-OPT: @OCamlStdlibDir@/hashtbl.p.cmx
-     @OCamlStdlibDir@/int32.ml
-     @OCamlStdlibDir@/int32.mli
-OPT: @OCamlStdlibDir@/int32.cmx
-OPT: @OCamlStdlibDir@/int32.p.cmx
-     @OCamlStdlibDir@/int64.ml
-     @OCamlStdlibDir@/int64.mli
-OPT: @OCamlStdlibDir@/int64.cmx
-OPT: @OCamlStdlibDir@/int64.p.cmx
-OPT: @OCamlStdlibDir@/int_misc.cmx
-     @OCamlStdlibDir@/lazy.ml
-     @OCamlStdlibDir@/lazy.mli
-OPT: @OCamlStdlibDir@/lazy.cmx
-OPT: @OCamlStdlibDir@/lazy.p.cmx
-     @OCamlStdlibDir@/lexing.ml
-     @OCamlStdlibDir@/lexing.mli
-OPT: @OCamlStdlibDir@/lexing.cmx
-OPT: @OCamlStdlibDir@/lexing.p.cmx
-     @OCamlStdlibDir@/listLabels.ml
-     @OCamlStdlibDir@/listLabels.mli
-OPT: @OCamlStdlibDir@/listLabels.cmx
-OPT: @OCamlStdlibDir@/listLabels.p.cmx
-     @OCamlStdlibDir@/list.ml
-     @OCamlStdlibDir@/list.mli
-OPT: @OCamlStdlibDir@/list.cmx
-OPT: @OCamlStdlibDir@/list.p.cmx
-     @OCamlStdlibDir@/map.ml
-     @OCamlStdlibDir@/map.mli
-OPT: @OCamlStdlibDir@/map.cmx
-OPT: @OCamlStdlibDir@/map.p.cmx
-     @OCamlStdlibDir@/marshal.ml
-     @OCamlStdlibDir@/marshal.mli
-OPT: @OCamlStdlibDir@/marshal.cmx
-OPT: @OCamlStdlibDir@/marshal.p.cmx
-     @OCamlStdlibDir@/moreLabels.ml
-     @OCamlStdlibDir@/moreLabels.mli
-OPT: @OCamlStdlibDir@/moreLabels.cmx
-OPT: @OCamlStdlibDir@/moreLabels.p.cmx
-     @OCamlStdlibDir@/mutex.mli
-OPT: @OCamlStdlibDir@/nat.cmx
-     @OCamlStdlibDir@/nat.mli
-     @OCamlStdlibDir@/nativeint.ml
-     @OCamlStdlibDir@/nativeint.mli
-OPT: @OCamlStdlibDir@/nativeint.cmx
-OPT: @OCamlStdlibDir@/nativeint.p.cmx
-OPT: @OCamlStdlibDir@/num.cmx
-     @OCamlStdlibDir@/num.mli
-OPT: @OCamlStdlibDir@/nums.a
-OPT: @OCamlStdlibDir@/nums.cmxa
-     @OCamlStdlibDir@/obj.ml
-     @OCamlStdlibDir@/obj.mli
-OPT: @OCamlStdlibDir@/obj.cmx
-OPT: @OCamlStdlibDir@/obj.p.cmx
-     @OCamlStdlibDir@/oo.ml
-     @OCamlStdlibDir@/oo.mli
-OPT: @OCamlStdlibDir@/oo.cmx
-OPT: @OCamlStdlibDir@/oo.p.cmx
-     @OCamlStdlibDir@/outcometree.cmi
-     @OCamlStdlibDir@/outcometree.mli
-     @OCamlStdlibDir@/parsing.ml
-     @OCamlStdlibDir@/parsing.mli
-OPT: @OCamlStdlibDir@/parsing.cmx
-OPT: @OCamlStdlibDir@/parsing.p.cmx
-     @OCamlStdlibDir@/pervasives.ml
-     @OCamlStdlibDir@/pervasives.mli
-OPT: @OCamlStdlibDir@/pervasives.cmx
-OPT: @OCamlStdlibDir@/pervasives.p.cmx
-     @OCamlStdlibDir@/printexc.ml
-     @OCamlStdlibDir@/printexc.mli
-OPT: @OCamlStdlibDir@/printexc.cmx
-OPT: @OCamlStdlibDir@/printexc.p.cmx
-     @OCamlStdlibDir@/printf.ml
-     @OCamlStdlibDir@/printf.mli
-OPT: @OCamlStdlibDir@/printf.cmx
-OPT: @OCamlStdlibDir@/printf.p.cmx
-     @OCamlStdlibDir@/profiling.cmi
-     @OCamlStdlibDir@/profiling.cmo
-     @OCamlStdlibDir@/queue.ml
-     @OCamlStdlibDir@/queue.mli
-OPT: @OCamlStdlibDir@/queue.cmx
-OPT: @OCamlStdlibDir@/queue.p.cmx
-     @OCamlStdlibDir@/random.ml
-     @OCamlStdlibDir@/random.mli
-OPT: @OCamlStdlibDir@/random.cmx
-OPT: @OCamlStdlibDir@/random.p.cmx
-OPT: @OCamlStdlibDir@/ratio.cmx
-     @OCamlStdlibDir@/ratio.mli
-     @OCamlStdlibDir@/scanf.ml
-     @OCamlStdlibDir@/scanf.mli
-OPT: @OCamlStdlibDir@/scanf.cmx
-OPT: @OCamlStdlibDir@/scanf.p.cmx
-     @OCamlStdlibDir@/set.ml
-     @OCamlStdlibDir@/set.mli
-OPT: @OCamlStdlibDir@/set.cmx
-OPT: @OCamlStdlibDir@/set.p.cmx
-     @OCamlStdlibDir@/sort.ml
-     @OCamlStdlibDir@/sort.mli
-OPT: @OCamlStdlibDir@/sort.cmx
-OPT: @OCamlStdlibDir@/sort.p.cmx
-     @OCamlStdlibDir@/stack.ml
-     @OCamlStdlibDir@/stack.mli
-OPT: @OCamlStdlibDir@/stack.cmx
-OPT: @OCamlStdlibDir@/stack.p.cmx
-OPT: @OCamlStdlibDir@/stdlib.a
-OPT: @OCamlStdlibDir@/stdlib.cmxa
-OPT: @OCamlStdlibDir@/stdlib.p.a
-OPT: @OCamlStdlibDir@/stdlib.p.cmxa
-     @OCamlStdlibDir@/std_exit.cmo
-OPT: @OCamlStdlibDir@/std_exit.cmx
-     @OCamlStdlibDir@/std_exit.ml
-OPT: @OCamlStdlibDir@/std_exit.o
-OPT: @OCamlStdlibDir@/std_exit.p.cmx
-OPT: @OCamlStdlibDir@/std_exit.p.o
-OPT: @OCamlStdlibDir@/stdLabels.cmx
-     @OCamlStdlibDir@/stdLabels.ml
-     @OCamlStdlibDir@/stdLabels.mli
-OPT: @OCamlStdlibDir@/stdLabels.p.cmx
-OPT: @OCamlStdlibDir@/str.a
-OPT: @OCamlStdlibDir@/str.cmx
-OPT: @OCamlStdlibDir@/str.cmxa
-     @OCamlStdlibDir@/str.mli
-     @OCamlStdlibDir@/stream.ml
-     @OCamlStdlibDir@/stream.mli
-OPT: @OCamlStdlibDir@/stream.cmx
-OPT: @OCamlStdlibDir@/stream.p.cmx
-     @OCamlStdlibDir@/string.ml
-     @OCamlStdlibDir@/string.mli
-OPT: @OCamlStdlibDir@/string.cmx
-OPT: @OCamlStdlibDir@/string.p.cmx
-     @OCamlStdlibDir@/stringLabels.ml
-     @OCamlStdlibDir@/stringLabels.mli
-OPT: @OCamlStdlibDir@/stringLabels.cmx
-OPT: @OCamlStdlibDir@/stringLabels.p.cmx
-     @OCamlStdlibDir@/sys.ml
-     @OCamlStdlibDir@/sys.mli
-OPT: @OCamlStdlibDir@/sys.cmx
-OPT: @OCamlStdlibDir@/sys.p.cmx
-     @OCamlStdlibDir@/thread.mli
-     @OCamlStdlibDir@/threadUnix.mli
-     @OCamlStdlibDir@/topstart.cmo
-OPT: @OCamlStdlibDir@/unix.a
-OPT: @OCamlStdlibDir@/unix.cmx
-OPT: @OCamlStdlibDir@/unix.cmxa
-     @OCamlStdlibDir@/unix.mli
-OPT: @OCamlStdlibDir@/unixLabels.cmx
-     @OCamlStdlibDir@/unixLabels.mli
-     @OCamlStdlibDir@/weak.ml
-     @OCamlStdlibDir@/weak.mli
-OPT: @OCamlStdlibDir@/weak.cmx
-OPT: @OCamlStdlibDir@/weak.p.cmx
      usr/share/man/man3/Arg.3o
      usr/share/man/man3/Array.3o
      usr/share/man/man3/ArrayLabels.3o
@@ -364,3 +129,182 @@ OPT: usr/share/man/man1/ocamlopt.1
      usr/share/man/man1/ocamlbuild.1
      usr/share/man/man1/ocamldebug.1
      usr/share/man/man1/ocamllex.1
+STD: arg.ml
+STD: arg.mli
+STD: arg.cmx
+STD: arith_flags.cmx
+STD: arith_status.cmx
+STD: arith_status.mli
+STD: arrayLabels.ml
+STD: arrayLabels.mli
+STD: arrayLabels.cmx
+STD: array.ml
+STD: array.mli
+STD: array.cmx
+STD: big_int.cmx
+STD: big_int.mli
+STD: bigarray.cmx
+STD: bigarray.cmxa
+STD: bigarray.mli
+STD: buffer.ml
+STD: buffer.mli
+STD: buffer.cmx
+STD: callback.ml
+STD: callback.mli
+STD: callback.cmx
+STD: camlinternalLazy.cmi
+STD: camlinternalLazy.cmx
+STD: camlinternalLazy.ml
+STD: camlinternalLazy.mli
+STD: camlinternalMod.cmi
+STD: camlinternalMod.cmx
+STD: camlinternalMod.ml
+STD: camlinternalMod.mli
+STD: camlinternalOO.ml
+STD: camlinternalOO.mli
+STD: camlinternalOO.cmx
+STD: char.ml
+STD: char.mli
+STD: char.cmx
+STD: complex.ml
+STD: complex.mli
+STD: complex.cmx
+STD: condition.mli
+STD: dbm.cmi
+STD: dbm.cmx
+STD: dbm.cmxa
+STD: dbm.mli
+STD: digest.ml
+STD: digest.mli
+STD: digest.cmx
+STD: dynlink.cmx
+STD: dynlink.cmxa
+STD: dynlink.mli
+STD: event.mli
+STD: filename.ml
+STD: filename.mli
+STD: filename.cmx
+STD: format.ml
+STD: format.mli
+STD: format.cmx
+STD: gc.ml
+STD: gc.mli
+STD: gc.cmx
+STD: genlex.ml
+STD: genlex.mli
+STD: genlex.cmx
+STD: hashtbl.ml
+STD: hashtbl.mli
+STD: hashtbl.cmx
+STD: int32.ml
+STD: int32.mli
+STD: int32.cmx
+STD: int64.ml
+STD: int64.mli
+STD: int64.cmx
+STD: int_misc.cmx
+STD: lazy.ml
+STD: lazy.mli
+STD: lazy.cmx
+STD: lexing.ml
+STD: lexing.mli
+STD: lexing.cmx
+STD: listLabels.ml
+STD: listLabels.mli
+STD: listLabels.cmx
+STD: list.ml
+STD: list.mli
+STD: list.cmx
+STD: map.ml
+STD: map.mli
+STD: map.cmx
+STD: marshal.ml
+STD: marshal.mli
+STD: marshal.cmx
+STD: moreLabels.ml
+STD: moreLabels.mli
+STD: moreLabels.cmx
+STD: mutex.mli
+STD: nat.cmx
+STD: nat.mli
+STD: nativeint.ml
+STD: nativeint.mli
+STD: nativeint.cmx
+STD: num.cmx
+STD: num.mli
+STD: nums.cmxa
+STD: obj.ml
+STD: obj.mli
+STD: obj.cmx
+STD: oo.ml
+STD: oo.mli
+STD: oo.cmx
+STD: outcometree.cmi
+STD: outcometree.mli
+STD: parsing.ml
+STD: parsing.mli
+STD: parsing.cmx
+STD: pervasives.ml
+STD: pervasives.mli
+STD: pervasives.cmx
+STD: printexc.ml
+STD: printexc.mli
+STD: printexc.cmx
+STD: printf.ml
+STD: printf.mli
+STD: printf.cmx
+STD: profiling.cmi
+STD: profiling.cmo
+STD: queue.ml
+STD: queue.mli
+STD: queue.cmx
+STD: random.ml
+STD: random.mli
+STD: random.cmx
+STD: ratio.cmx
+STD: ratio.mli
+STD: scanf.ml
+STD: scanf.mli
+STD: scanf.cmx
+STD: set.ml
+STD: set.mli
+STD: set.cmx
+STD: sort.ml
+STD: sort.mli
+STD: sort.cmx
+STD: stack.ml
+STD: stack.mli
+STD: stack.cmx
+STD: stdlib.cmxa
+STD: std_exit.cmo
+STD: std_exit.cmx
+STD: std_exit.ml
+STD: stdLabels.cmx
+STD: stdLabels.ml
+STD: stdLabels.mli
+STD: str.cmx
+STD: str.cmxa
+STD: str.mli
+STD: stream.ml
+STD: stream.mli
+STD: stream.cmx
+STD: string.ml
+STD: string.mli
+STD: string.cmx
+STD: stringLabels.ml
+STD: stringLabels.mli
+STD: stringLabels.cmx
+STD: sys.ml
+STD: sys.mli
+STD: sys.cmx
+STD: thread.mli
+STD: threadUnix.mli
+STD: topstart.cmo
+STD: unix.cmx
+STD: unix.cmxa
+STD: unix.mli
+STD: unixLabels.cmx
+STD: unixLabels.mli
+STD: weak.ml
+STD: weak.mli
+STD: weak.cmx
